--- a/resources/ui/adw/butterflies.ui
+++ b/resources/ui/adw/butterflies.ui
@@ -51,19 +51,18 @@ SPDX-License-Identifier: GPL-3.0-or-later
 
     <child>
       <object class="AdwActionRow">
-        <property name="title" translatable="yes">Fade Width</property>
+        <property name="title" translatable="yes">Color</property>
+        <property name="activatable-widget">butterflies-color</property>
         <child>
-          <object class="GtkScale">
+          <object class="GtkColorButton" id="butterflies-color">
+            <property name="use_alpha">0</property>
+            <property name="show_editor">1</property>
+            <property name="width-request">250</property>
             <property name="valign">center</property>
-            <property name="draw-value">1</property>
-            <property name="digits">2</property>
-            <property name="value-pos">left</property>
-            <property name="width-request">300</property>
-            <property name="adjustment">butterflies-width</property>
           </object>
         </child>
         <child>
-          <object class="GtkButton" id="reset-butterflies-width">
+          <object class="GtkButton" id="reset-butterflies-color">
             <property name="icon-name">edit-clear-symbolic</property>
             <property name="valign">center</property>
             <property name="tooltip-text" translatable="yes">Reset to Default Value</property>
