--- a/resources/ui/adw/butterflies.ui
+++ b/resources/ui/adw/butterflies.ui
@@ -14,11 +14,18 @@ SPDX-License-Identifier: GPL-3.0-or-later
     <property name="page-increment">100</property>
   </object>
 
-  <object class="GtkAdjustment" id="butterflies-width">
-    <property name="upper">1</property>
-    <property name="lower">0</property>
-    <property name="step-increment">0.01</property>
-    <property name="page-increment">0.1</property>
+  <object class="GtkAdjustment" id="butterflies-spacing">
+    <property name="upper">100</property>
+    <property name="lower">5</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
+  </object>
+
+  <object class="GtkAdjustment" id="butterflies-size">
+    <property name="upper">100</property>
+    <property name="lower">5</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
   </object>
 
   <object class="AdwExpanderRow" id="butterflies-prefs">
@@ -38,6 +45,58 @@ SPDX-License-Identifier: GPL-3.0-or-later
         </child>
         <child>
           <object class="GtkButton" id="reset-butterflies-animation-time">
+            <property name="icon-name">edit-clear-symbolic</property>
+            <property name="valign">center</property>
+            <property name="tooltip-text" translatable="yes">Reset to Default Value</property>
+            <style>
+              <class name="flat" />
+            </style>
+          </object>
+        </child>
+      </object>
+    </child>
+
+    <child>
+      <object class="AdwActionRow">
+        <property name="title" translatable="yes">Spacing [pixels]</property>
+        <child>
+          <object class="GtkScale">
+            <property name="valign">center</property>
+            <property name="draw-value">1</property>
+            <property name="digits">0</property>
+            <property name="value-pos">left</property>
+            <property name="width-request">300</property>
+            <property name="adjustment">butterflies-spacing</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton" id="reset-butterflies-spacing">
+            <property name="icon-name">edit-clear-symbolic</property>
+            <property name="valign">center</property>
+            <property name="tooltip-text" translatable="yes">Reset to Default Value</property>
+            <style>
+              <class name="flat" />
+            </style>
+          </object>
+        </child>
+      </object>
+    </child>
+
+    <child>
+      <object class="AdwActionRow">
+        <property name="title" translatable="yes">Size [pixels]</property>
+        <child>
+          <object class="GtkScale">
+            <property name="valign">center</property>
+            <property name="draw-value">1</property>
+            <property name="digits">0</property>
+            <property name="value-pos">left</property>
+            <property name="width-request">300</property>
+            <property name="adjustment">butterflies-size</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton" id="reset-butterflies-size">
             <property name="icon-name">edit-clear-symbolic</property>
             <property name="valign">center</property>
             <property name="tooltip-text" translatable="yes">Reset to Default Value</property>
